# lab4_bot

./: .pdm-python  README.md  pyproject.toml
src/lab4_bot/: __main__.py  bot.py
